Fix campus menu on mobile

--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -215,6 +215,13 @@
 }
 // @include media-height($tablet);
 
+@mixin media-height-below($size) {
+	@media screen and (max-height: $size) {
+		@content;
+	}
+}
+// @include media-height-below($mobile);
+
 //—————————————————————————————————————————————— Visiblity
 @mixin visible {
     opacity: 1;
